--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,22 @@ body{
     padding: 10px;
     background-color:#2D2A2E ;
 }
+h1{
+    margin: 0px;
+    text-align: center;
+    color: white;
+}
 #visualize,#randomize{
+    margin: 5px 0px;
     border: none;
     background-color:cyan ;
-    padding: 10px;
+    padding: 2px 10px;
     border-radius: 5px;
 
 
+}
+.left,.right{
+    margin: 10px;
 }
 nav>div>h1{
     color: white;
@@ -34,9 +43,9 @@ nav>div{
 }
 
 #sorts{
-    margin-left: 20px;
+    margin: 5px 0px;
     border: none;
-    padding: 10px 0px 10px 10px;
+    padding: 2px 10px;
     background-color: cyan;
     border-radius: 5px;
 }
